--- a/index.html
+++ b/index.html
@@ -50,31 +50,30 @@
 					<li><a class="pol" href="#">pol</a></li>
 				</ul>
 			</div>
-			<div class="header__menu-btn">
-				<div class="header__menu-row"></div>
-				<div class="header__menu-row"></div>
-				<div class="header__menu-row"></div>
-			</div>
+			<button id="burger" class="open-main-nav">
+				<span class="burger"></span>
+				<!-
+			</button>
 		</div>
 	
 	</div>
 	<nav class="header__menu">
-		<div class="container">
-			
-			<ul>
-				<li><a href="#">о студии</a></li>
-				<li class="header__menu-dots"></li>
-				<li><a href="#">портфолио</a></li>
-				<li class="header__menu-dots"></li>
-				<li><a href="#">этапы роботы</a></li>
-				<li class="header__menu-dots"></li>
-				<li><a href="#">стоимость</a></li>
-				<li class="header__menu-dots"></li>
-				<li><a href="#">эко-материалы</a></li>
-				<li class="header__menu-dots"></li>
-				<li><a href="#">контакты</a></li>
-			</ul>
-		
+		<div class="main-nav" id="main-nav">
+			<div class="container">
+				<ul>
+					<li><a href="#">о студии</a></li>
+					<li class="header__menu-dots"></li>
+					<li><a href="#">портфолио</a></li>
+					<li class="header__menu-dots"></li>
+					<li><a href="#">этапы роботы</a></li>
+					<li class="header__menu-dots"></li>
+					<li><a href="#">стоимость</a></li>
+					<li class="header__menu-dots"></li>
+					<li><a href="#">эко-материалы</a></li>
+					<li class="header__menu-dots"></li>
+					<li><a href="#">контакты</a></li>
+				</ul>
+			</div>
 		</div>
 	</nav>
 	<nav class="header__menu-mobile">
